assets/styles/style.css
body {
    background-color: rgba(0, 0, 0, 0.1);
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
}
/** Classes **/

.text {
    font-family: sans-serif;
    color: rgba(0, 0, 0, 0.85);
}
.description {
    font-size: 2em;
}

/** Ids **/
#timer {
    border: 2px solid rgba(0, 0, 0, 0.35);
    width: 800px;
    height: 400px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}
#timer-inner {
    font-size: 5em;
    color: rgba(0, 0, 0, 0.65);
    font-weight: 600px;
    display: flex;
    justify-content: center;
    border-radius: 8px 8px 0 0;
    border-bottom: 3px solid rgba(122, 10, 10, 0.05);
}

#timer-background {
    position: absolute;
    width: 800px;
    height: 92px;
    z-index: -1;
    border-radius: 8px 8px 0 0;
    background-color: rgba(2, 74, 107, 0.75);
    will-change: transform;
}

#timer-background.start-animation {
    border-radius: 8px 0 0 0;
}

.start-animation {
    animation: timer-animation linear;
    transform-origin:left;
}

@keyframes timer-animation {
    from {transform: scaleX(1);}
    to {transform: scaleX(0);}
}

#timer-value {
    flex-grow: 0.05;
}

#start-button {
    border-radius: 10px;
    border: 1px solid rgba(0, 0, 0, 0.15);
    background: rgba(29, 127, 173, 0.35);
    width: 300px;
    color: rgba(0, 0, 0, 0.65);
    font-size: 3em;
}
#button-wrapper {
    display: flex;
    justify-content: center;
    flex-grow: 1;
    align-items: flex-end;
    padding: 16px;
}
#timer-info {
    display: flex;
    flex-direction: column;
    padding: 16px;
}
#timer-type {
    font-size: 4em;
    justify-content: center;
    display: flex;
}
#round-info {
    display: flex;
    justify-content: center;
}
#timer-round-desc {
    flex-grow: 0.02;
}

